<resources>
    <string name="app_name">Logik und Algebra Training</string>
    <string name="begrueßung">Herzlich Willkommen zur Logik und Algebra Trainingsapp. Bitte wählen Sie aus dem Menü das Kapitel aus, aus dem Sie Fragen beantworten wollen.</string>
    <string name="logo">Platzhalter für das DHBW Logo</string>

    <string name="navigation_drawer_open">Öffnet das Navigationsmenü</string>
    <string name="navigation_drawer_close">Schließt das Navigationsmenü</string>
    <string name="training">Training</string>
    <string name="kapitel_1">Kapitel 1: Mengen</string>
    <string name="kapitel_2">Kapitel 2: Relationen</string>
    <string name="kapitel_3">Kapitel 3: Abbildungen</string>
    <string name="kapitel_4">Kapitel 4: Boole´sche Algebra</string>
    <string name="kapitel_5">Kapitel 5: Aussagenlogik</string>
    <string name="k_1">Mengen</string>
    <string name="k_2">Relationen</string>
    <string name="k_3">Abbildungen</string>
    <string name="k_4">Boole´sche Algebra</string>
    <string name="k_5">Aussagenlogik</string>
    <string name="klausur">Klausurmodus</string>
    <string name="sonstiges">Sonstiges</string>
    <string name="eigene_aufgaben">Eigene Aufgaben</string>
    <string name="auswertung">Auswertung</string>
    <string name="zurucksetzen">Zurücksetzen</string>
    <string name="einstellungen">Einstellungen</string>
    <string name="logging">Logging</string>
    <string name="hint_eingabefeld">Eingabefeld für die Lösung</string>
    <string name="button_next">Weiter</string>
    <string name="image_question">Bild zur Frage</string>
    <string name="all_questions_answered">Glückwunsch! Sie haben alle Fragen zu diesem Kapitel beantwortet.
        Sie können diese Antworten über das Einstellungsmenü zurücksetzen.</string>
    <string name="no_answer_given">Bitte wählen Sie mindestens eine Antwort aus.</string>
    <string name="reset_answers">Über diesen Button können Sie alle gegebenen Antworten zurücksetzen.</string>
    <string name="fortschritt_zurucksetzen">Fortschritt zurücksetzen</string>
    <string name="weiter">Weiter</string>
    <string name="next_question">Nächste Frage</string>
</resources>
