<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/training">
        <menu>
            <item
                android:id="@+id/nav_mengen"
                android:title="@string/kapitel_1" />
            <item
                android:id="@+id/nav_relationen"
                android:title="@string/kapitel_2" />
            <item
                android:id="@+id/nav_abbildungen"
                android:title="@string/kapitel_3" />
            <item
                android:id="@+id/nav_boolesche"
                android:title="@string/kapitel_4" />
            <item
                android:id="@+id/nav_aussagenlogik"
                android:title="@string/kapitel_5" />
            <item
                android:id="@+id/nav_klausurmodus"
                android:title="@string/klausur" />
        </menu>
    </item>

    <item android:title="@string/sonstiges">
        <menu>
            <!-- TODO: implement insert of own problems based on the lua-library.zip in assets
            <item
                android:id="@+id/nav_problems"
                android:icon="@drawable/frage"
                android:title="@string/eigene_aufgaben" />
            -->
            <item
                android:id="@+id/nav_stats"
                android:icon="@drawable/stats"
                android:title="@string/auswertung" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/settings"
                android:title="@string/einstellungen" />
            <item
                android:id="@+id/nav_logging"
                android:icon="@drawable/settings"
                android:title="@string/logging" />
        </menu>
    </item>

</menu>
