<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dhbw.luatraining.QuestionActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:id="@+id/frame"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp">

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/chart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right">

                <RelativeLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="Kapitelauswahl"
                        android:id="@+id/textView"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="15dp"
                        android:textStyle="bold"
                        android:textSize="17dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_alignLeft="@+id/switch1"
                        android:layout_marginLeft="10dp" />

                    <Switch
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/switch1"
                        android:showText="false"
                        android:checked="true"
                        android:layout_marginLeft="10dp"
                        android:layout_below="@+id/textView" />

                    <Switch
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/switch2"
                        android:checked="true"
                        android:layout_below="@id/switch1"
                        android:layout_marginLeft="10dp" />

                    <Switch
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/switch3"
                        android:checked="true"
                        android:layout_below="@+id/switch2"
                        android:layout_marginLeft="10dp" />

                    <Switch
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/switch4"
                        android:checked="true"
                        android:layout_gravity="right"
                        android:layout_below="@+id/switch3"
                        android:layout_marginLeft="10dp" />

                    <Switch
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/switch5"
                        android:checked="true"
                        android:layout_gravity="left"
                        android:gravity="left"
                        android:layout_below="@+id/switch4"
                        android:layout_marginLeft="10dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/kapitel_1"
                        android:id="@+id/textView2"
                        android:layout_toRightOf="@+id/switch1"
                        android:layout_marginLeft="10dp"
                        android:layout_alignTop="@+id/switch1"
                        android:layout_alignBottom="@+id/switch1"
                        android:textAlignment="center" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/kapitel_2"
                        android:id="@+id/textView3"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="0dp"
                        android:layout_toRightOf="@id/switch2"
                        android:layout_below="@+id/switch1"
                        android:layout_alignBottom="@+id/switch2"
                        android:textAlignment="center" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/kapitel_3"
                        android:id="@+id/textView4"
                        android:layout_toRightOf="@+id/switch3"
                        android:layout_below="@+id/switch2"
                        android:layout_marginLeft="10dp"
                        android:layout_alignBottom="@+id/switch3"
                        android:textAlignment="center" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/kapitel_4"
                        android:id="@+id/textView5"
                        android:layout_alignTop="@+id/switch4"
                        android:layout_alignBottom="@+id/switch4"
                        android:textAlignment="center"
                        android:layout_toRightOf="@+id/switch4"
                        android:layout_marginLeft="10dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/kapitel_5"
                        android:id="@+id/textView6"
                        android:layout_alignTop="@+id/switch5"
                        android:layout_alignBottom="@+id/switch5"
                        android:textAlignment="center"
                        android:layout_toRightOf="@+id/switch5"
                        android:layout_marginLeft="10dp" />

                </RelativeLayout>

            </LinearLayout>


        </FrameLayout>

    </LinearLayout>

</RelativeLayout>
